#11 Fix: Mini-profile anchor tag wrap

--- a/style/components/mini-profile.css
+++ b/style/components/mini-profile.css
@@ -18,7 +18,7 @@
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
-  width: 99%;
+  width: 90%;
 }
 
 .mini-profile .title {
